crates/templates/tests/snapshots/usage_test__impl-8.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with required and multiple option
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"

  printf "  usage -rm|--required-multiple <REQUIRED-MULTIPLE> [OPTIONS]\n"

  printf "  usage -h|--help\n"

  
  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -rm --required <REQUIRED>\n"
  printf "    Test required and multiple option\n"
  printf "    [@multiple]\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

