crates/templates/tests/snapshots/usage_test__impl.snap
---
source: crates/templates/tests/usage_test.rs
description: Typical Usage
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage -r|--required <REQUIRED> [OPTIONS]\n"

  printf "  usage -h|--help\n"

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -r --required <REQUIRED>\n"
  printf "    Test required option\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}

