crates/templates/tests/snapshots/usage_test__render-13.snap
---
source: crates/templates/tests/usage_test.rs
description: Usage with commands and options
expression: output
---
usage() {
  printf "Test simple usage\n"
  printf "\n\033[4m%s\033[0m\n" "Usage:"
  printf "  usage [OPTIONS] [COMMAND] [COMMAND_OPTIONS]\n"
  printf "  usage -h|--help\n"
  printf "\n\033[4m%s\033[0m\n" "Commands:"
  cat <<EOF
  foo .... Test foo command
EOF

  printf "\n\033[4m%s\033[0m\n" "Options:"
  printf "  -cm --choices [<CHOICES>]\n"
  printf "    Test option with choices and multiple\n"
  printf "    [@multiple, @choices foo|bar|baz]\n"
  printf "  -h --help\n"
  printf "    Print help\n"
}
